Fixed mobile alignment issues

--- a/css/homepage-styles.css
+++ b/css/homepage-styles.css
@@ -96,7 +96,7 @@
 		margin: 0;
 	}
 	.article-tile {
-		justify-content: center;
+		justify-content: flex-start;
 	}
 }
 
